Bug 1541563 - Sync 131 - Aligned breakpoints and XHR breakpoints panes r=loganfsmyth
Differential Revision: https://phabricator.services.mozilla.com/D25986

--HG--
extra : moz-landing-system : lando

--- a/devtools/client/debugger/new/src/components/SecondaryPanes/Expressions.css
+++ b/devtools/client/debugger/new/src/components/SecondaryPanes/Expressions.css
@@ -44,7 +44,7 @@
 .expressions-list {
   /* TODO: add normalize */
   margin: 0;
-  padding: 0;
+  padding: 4px 0px;
 }
 
 .expression-input-container {
